<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prograstinando.daniel.drumhelper.Metronome">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/textTempo"
                android:id="@+id/textViewTempo"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextTempo"
                android:text="60"
                android:layout_alignBottom="@+id/textViewTempo"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_weight="2"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BPM"
                android:id="@+id/textViewBPM"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlusOne"
                android:id="@+id/buttonPlusOne"
                android:layout_weight="1"
                android:onClick="alterTempo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinusOne"
                android:id="@+id/buttonMinusOne"
                android:layout_weight="1"
                android:onClick="alterTempo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlusFive"
                android:id="@+id/buttonPlusFive"
                android:layout_weight="1"
                android:onClick="alterTempo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinusFive"
                android:id="@+id/buttonMinusFive"
                android:layout_weight="1"
                android:onClick="alterTempo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlusTen"
                android:id="@+id/buttonPlusTen"
                android:layout_weight="1"
                android:onClick="alterTempo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinusTen"
                android:id="@+id/buttonMinusTen"
                android:layout_weight="1"
                android:onClick="alterTempo" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
